Misuse of cyrrilic character for the Latin 'M'.

--- a/tex/p012.tex
+++ b/tex/p012.tex
@@ -31,7 +31,7 @@
 \vs p012 1:16 The central universe is the creation of eternity; the seven superuniverses are the creations of time; the four outer space levels are undoubtedly destined to eventuate\hyp{}evolve the ultimacy of creation. And there are those who maintain that the Infinite can never attain full expression short of infinity; and therefore do they postulate an additional and unrevealed creation beyond the fourth and outermost space level, a possible ever\hyp{}expanding, never\hyp{}ending universe of infinity. In theory we do not know how to limit either the infinity of the Creator or the potential infinity of creation, but as it exists and is administered, we regard the master universe as having limitations, as being definitely delimited and bounded on its outer margins by open space.
 \usection{The Domains of the Unqualified Absolute}
 \vs p012 2:1 When Urantia astronomers peer through their increasingly powerful telescopes into the mysterious stretches of outer space and there behold the amazing evolution of almost countless physical universes, they should realize that they are gazing upon the mighty outworking of the unsearchable plans of the Architects of the Master Universe. True, we do possess evidences which are suggestive of the presence of certain Paradise personality influences here and there throughout the vast energy manifestations now characteristic of these outer regions, but from the larger viewpoint the space regions extending beyond the outer borders of the seven superuniverses are generally recognized as constituting the domains of the Unqualified Absolute.
-\vs p012 2:2 Although the unaided human eye can see only two or three nebulae\fnst{That is galaxies. Unaided eye can see only two galaxies in the Northern Hemisphere: M31 (Andromeda) and M33 (Triangulum). These very objects are mentioned in the book \cite{Baker1}, which served as one of the sources of this paper. The Large and Small Magellanic Clouds are visible only in the Southern Hemisphere and are considered to be the sattelites of our Galaxy. Therefore, the Andromeda galaxy is situated \bibemph{outside the borders of the superuniverse of Orvonton}. See also \bibref[15:4.7]{p015 4:7}.} outside the borders of the superuniverse of Orvonton, your telescopes literally reveal millions upon millions of these physical universes in process of formation. Most of the starry realms visually exposed to the search of your present\hyp{}day telescopes are in Orvonton, but with photographic technique the larger telescopes penetrate far beyond the borders of the grand universe into the domains of outer space, where untold universes are in process of organization. And there are yet other millions of universes beyond the range of your present instruments.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/M31.jpg}\caption{Andromeda galaxy (М31)}\end{figure}}
+\vs p012 2:2 Although the unaided human eye can see only two or three nebulae\fnst{That is galaxies. Unaided eye can see only two galaxies in the Northern Hemisphere: M31 (Andromeda) and M33 (Triangulum). These very objects are mentioned in the book \cite{Baker1}, which served as one of the sources of this paper. The Large and Small Magellanic Clouds are visible only in the Southern Hemisphere and are considered to be the sattelites of our Galaxy. Therefore, the Andromeda galaxy is situated \bibemph{outside the borders of the superuniverse of Orvonton}. See also \bibref[15:4.7]{p015 4:7}.} outside the borders of the superuniverse of Orvonton, your telescopes literally reveal millions upon millions of these physical universes in process of formation. Most of the starry realms visually exposed to the search of your present\hyp{}day telescopes are in Orvonton, but with photographic technique the larger telescopes penetrate far beyond the borders of the grand universe into the domains of outer space, where untold universes are in process of organization. And there are yet other millions of universes beyond the range of your present instruments.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/M31.jpg}\caption{Andromeda galaxy (M31)}\end{figure}}
 \vs p012 2:3 In the not\hyp{}distant future, new telescopes\fnst{According to \cite{Baker1} the ``new'' 200\hyp{}inch telescope Hale, sponsored by the Rockefeller Foundation in 1928 is meant here. It was being built from 1936 until 1948.} will reveal to the wondering gaze of Urantian astronomers no less than 375,000,000 new galaxies in the remote stretches of outer space. At the same time these more powerful telescopes will disclose that many island universes formerly believed to be in outer space are really a part of the galactic system of Orvonton. The seven superuniverses are still growing; the periphery of each is gradually expanding; new nebulae are constantly being stabilized and organized; and some of the nebulae which Urantian astronomers regard as extragalactic are actually on the fringe of Orvonton and are travelling along with us.\fnst{The Large and Small Magellanic Clouds may be referred to here.}\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/Hale-200inch.jpg}\caption{200\hyp{}inch telescope George Ellery Hale in San Diego, California, USA}\end{figure}}
 \vs p012 2:4 \pc The Uversa star students observe that the grand universe is surrounded by the ancestors of a series of starry and planetary clusters which completely encircle the present inhabited creation as concentric rings of outer universes upon universes. The physicists of Uversa calculate that the energy and matter of these outer and uncharted regions already equal many times the total material mass and energy charge embraced in all seven superuniverses. We are informed that the metamorphosis of cosmic force in these outer space levels is a function of the Paradise force organizers. We also know that these forces are ancestral to those physical energies which at present activate the grand universe. The Orvonton power directors, however, have nothing to do with these far\hyp{}distant realms, neither are the energy movements therein discernibly connected with the power circuits of the organized and inhabited creations.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{images/LMC.jpg}\caption{Large and Small Magellanic Clouds}\end{figure}}
 \vs p012 2:5 \pc We know very little of the significance of these tremendous phenomena of outer space. A greater creation of the future is in process of formation. We can observe its immensity, we can discern its extent and sense its majestic dimensions, but otherwise we know little more about these realms than do the astronomers of Urantia. As far as we know, no material beings on the order of humans, no angels or other spirit creatures, exist in this outer ring of nebulae, suns, and planets. This distant domain is beyond the jurisdiction and administration of the superuniverse governments.
