Updated the text of 92:6.14 to SRT and added two footnotes.

--- a/tex/p092.tex
+++ b/tex/p092.tex
@@ -77,7 +77,7 @@
 \vs p092 6:11 \ublistelem{9.}\bibnobreakspace Christianity.
 \vs p092 6:12 \ublistelem{10.}\bibnobreakspace Islam.
 \vs p092 6:13 \ublistelem{11.}\bibnobreakspace Sikhism --- the most recent.
-\vs p092 6:14 \pc The most advanced religions of ancient times were Judaism and Hinduism, and each respectively has greatly influenced the course of religious development in Orient and Occident. Both Hindus and Hebrews believed that their religions were inspired and revealed, and they believed all others to be decadent forms of the one true faith.
+\vs p092 6:14 \pc The most advanced religions of ancient times were Hinduism and Judaism\fnst{In 1955 text in reverse order: ``Judaism and Hinduism''. Corrected by the SRT Committee, because actually Judaism greatly influenced Occidental religion and Hinduism greatly influenced Oriental religion.}, and each respectively has greatly influenced the course of religious development in Orient and Occident. Both Hindus and Hebrews believed that their religions were inspired and revealed, and they believed all others to be decadent forms of the one true faith\fnst{In the human source there is an additional interesting detail: ``Orthodoxy maintained in ancient India that there was one inspired religion and all other religions were decadent forms of it, while in the sixth century B.C. heterodox Hindus said that all religions were invented by the priests for their own profit. The same theories sprang up independently centuries later in Europe.''}.
 \vs p092 6:15 India is divided among Hindu, Sikh, Mohammedan, and Jain, each picturing God, man, and the universe as these are variously conceived. China follows the Taoist and the Confucian teachings; Shinto is revered in Japan.
 \vs p092 6:16 The great international, interracial faiths are the Hebraic, Buddhist, Christian, and Islamic. Buddhism stretches from Ceylon and Burma through Tibet and China to Japan. It has shown an adaptability to the mores of many peoples that has been equalled only by Christianity.
 \vs p092 6:17 The Hebrew religion encompasses the philosophic transition from polytheism to monotheism; it is an evolutionary link between the religions of evolution and the religions of revelation. The Hebrews were the only western people to follow their early evolutionary gods straight through to the God of revelation. But this truth never became widely accepted until the days of Isaiah, who once again taught the blended idea of a racial deity combined with a Universal Creator: “O Lord of Hosts, God of Israel, you are God, even you alone; you have made heaven and earth.” At one time the hope of the survival of Occidental civilization lay in the sublime Hebraic concepts of goodness and the advanced Hellenic concepts of beauty.
@@ -91,7 +91,7 @@
 \vs p092 7:4 All these religions have arisen as a result of man’s variable intellectual response to his identical spiritual leading. They can never hope to attain a uniformity of creeds, dogmas, and rituals --- these are intellectual; but they can, and some day will, realize a unity in true worship of the Father of all, for this is spiritual, and it is forever true, in the spirit all men are equal.
 \vs p092 7:5 \pc Primitive religion was largely a material\hyp{}value consciousness, but civilization elevates religious values, for true religion is the devotion of the self to the service of meaningful and supreme values. As religion evolves, ethics becomes the philosophy of morals, and morality becomes the discipline of self by the standards of highest meanings and supreme values --- divine and spiritual ideals. And thus religion becomes a spontaneous and exquisite devotion, the living experience of the loyalty of love.
 \vs p092 7:6 The quality of a religion is indicated by:
-\vs p092 7:7 \ublistelem{1.}\bibnobreakspace Level of values\fnst{In 1955 text ``Level values''. “Level values” has no discernible meaning in this context.} --- loyalties.
+\vs p092 7:7 \ublistelem{1.}\bibnobreakspace Level of values\fnst{In 1955 text ``Level values'', which has no discernible meaning in this context.} --- loyalties.
 \vs p092 7:8 \ublistelem{2.}\bibnobreakspace Depth of meanings --- the sensitization of the individual to the idealistic appreciation of these highest values.
 \vs p092 7:9 \ublistelem{3.}\bibnobreakspace Consecration intensity --- the degree of devotion to these divine values.
 \vs p092 7:10 \ublistelem{4.}\bibnobreakspace The unfettered progress of the personality in this cosmic path of idealistic spiritual living, realization of sonship with God and never\hyp{}ending progressive citizenship in the universe.
